--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "textlint-rule-preset-ja-technical-writing",
-  "version": "5.0.1",
+  "version": "5.0.2",
   "description": "技術文書向けのtextlintルールプリセット",
   "keywords": [
     "textlint",
@@ -51,7 +51,7 @@
     "textlint-rule-no-hankaku-kana": "^1.0.2",
     "textlint-rule-no-mix-dearu-desumasu": "^4.0.1",
     "textlint-rule-no-nfd": "^1.0.2",
-    "textlint-rule-preset-jtf-style": "^2.3.8",
+    "textlint-rule-preset-jtf-style": "hata6502/textlint-rule-preset-jtf-style",
     "textlint-rule-sentence-length": "^2.2.0"
   },
   "devDependencies": {
